# quickie

app/: package.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: client.rs  lib.rs
app/src/components/: Body.tsx  Entry.tsx
app/src/components/request/: Headers.tsx  Params.tsx  Request.tsx
app/src/components/response/: Body.tsx
app/src/utils/: api.ts  http.ts  state.ts
