[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1.1.0"
hyper = { version = "1.5.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.9", features = ["tokio", "client"] }
tokio = { version = "1.40.0", features = ["net"] }
http-body-util = "0.1.2"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.6"
pki-types = { package = "rustls-pki-types", version = "1", features = ["alloc"] }
hyper-tls = "0.6.0"

